[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/godot-xr-tools/objects/Object_pickable.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Ball.gd" type="Script" id=2]
[ext_resource path="res://assets/freesound.org/22768__franciscopadilla__65-high-timbale.wav" type="AudioStream" id=3]

[sub_resource type="PhysicsMaterial" id=6]
bounce = 0.53

[sub_resource type="SphereShape" id=1]
radius = 0.15

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0.576471, 0, 1 )

[sub_resource type="SphereMesh" id=3]
material = SubResource( 2 )
radius = 0.15
height = 0.3
radial_segments = 32
rings = 16

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.188235, 0.188235, 0.188235, 1 )
metallic = 0.51
roughness = 0.58

[sub_resource type="CylinderMesh" id=5]
material = SubResource( 4 )
top_radius = 0.152
bottom_radius = 0.152
height = 0.01
radial_segments = 32

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sphere:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "ResetAnim"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sphere:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5.4, 5.5, 6.1, 6.2, 6.5, 6.6, 6.8, 6.9, 6.99 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 6.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_reset"
} ]
}

[node name="Ball" instance=ExtResource( 1 )]
physics_material_override = SubResource( 6 )
continuous_cd = true
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
highlight_mesh_instance = NodePath("Sphere")

[node name="CollisionShape" parent="." index="1"]
shape = SubResource( 1 )

[node name="Sphere" type="MeshInstance" parent="." index="2"]
mesh = SubResource( 3 )
material/0 = null

[node name="Ring01" type="MeshInstance" parent="Sphere" index="0"]
mesh = SubResource( 5 )
skeleton = NodePath("../..")
material/0 = null

[node name="Ring02" type="MeshInstance" parent="Sphere" index="1"]
transform = Transform( 0.5, -0.866025, 0, 0.866025, 0.5, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../..")
material/0 = null

[node name="Ring03" type="MeshInstance" parent="Sphere" index="2"]
transform = Transform( 0.5, 0.866025, 0, -0.866025, 0.5, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../..")
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
anims/RESET = SubResource( 8 )
anims/ResetAnim = SubResource( 7 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." index="4"]
stream = ExtResource( 3 )
bus = "Reverb"

[node name="BounceTimer" type="Timer" parent="." index="5"]
wait_time = 0.1
one_shot = true

[connection signal="body_shape_entered" from="." to="." method="_on_Ball_body_shape_entered"]
[connection signal="timeout" from="BounceTimer" to="." method="_on_BounceTimer_timeout"]
